VideoPress: Fix spacing between items at VideoQuickActions

--- a/projects/packages/videopress/src/client/admin/components/video-quick-actions/style.module.scss
+++ b/projects/packages/videopress/src/client/admin/components/video-quick-actions/style.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	gap: calc( var(--spacing-base) * 2 ); // 18px
+	gap: var(--spacing-base); // 8px
 
 	.popover {
 		padding: var(--spacing-base); // 8px
